# local-image-search3

./: .gitignore  README.md  download_models.py
.cargo/: config.toml
.github/workflows/: build-macos.yml
docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md
scripts/: convert_models.py
src/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  copy-to-deploy.ps1  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: db.rs  index.rs  mod.rs  paths.rs  search.rs  system.rs
src-tauri/src/db/: sqlite.rs
src-tauri/src/index/: mod.rs  simple_index.rs
src-tauri/src/models/: mod.rs  onnx.rs  preprocessor.rs  tokenizer.rs
src/src/: App.tsx  styles.css
src/src/api/: tauri.ts
src/src/components/: ImageGrid.tsx  SearchBar.tsx
